changes in the project

--- a/project.html
+++ b/project.html
@@ -52,29 +52,30 @@
             </div>
             <div class="bo2">
                 <div class="im2">
-                    <a href="https://overlaysclothing.com/products/arise" target="_blank"><img class="im3"
-                            src="https://cdn.shopify.com/s/files/1/0566/0839/1368/products/1_720x.jpg?v=1668604562"
+                    <a href="https://www.maincharacterindia.com/collections/oversized-tshirts/products/future-coffee-brown-oversized-tshirt" target="_blank"><img class="im3"
+                            src="https://www.maincharacterindia.com/cdn/shop/files/FutureBrown-1.png?v=1714737467&width=800"
                             alt=""></a>
-                    <a href="https://overlaysclothing.com/products/dare-to-dream-fawn" target="_blank"> <img class="im3"
-                            src="https://cdn.shopify.com/s/files/1/0566/0839/1368/products/Untitled-1_0015_20_jpg_021745d0-aa73-4292-800f-4844f91916e8_720x.jpg?v=1668604644"
+                    <a href="https://www.bonkerscorner.com/product/black-heavyweight-faded-polo/" target="_blank"> <img class="im3"
+                            src="https://assets.bonkerscorner.com/uploads/2023/09/26170102/Bonkerscorner_black-polo_02.jpg"
                             alt=""></a>
-                    <a href="https://overlaysclothing.com/collections/winter-collection/products/the-polar"
+                    <a href="https://www.burgerbaeclothing.com/collections/hoodies/products/travis-scott-astro-world-hoodie-for-men"
                         target="_blank"><img class="im3"
-                            src="https://cdn.shopify.com/s/files/1/0566/0839/1368/products/Untitled-1_0076_81_jpg_720x.jpg?v=1668605315"
+                            src="https://www.burgerbaeclothing.com/cdn/shop/files/travis-scott-astro-world-hoodie-for-men-burgerbae-3_1100x.jpg?v=1687505879"
                             alt=""></a>
-                    <a href="https://overlaysclothing.com/collections/winter-collection/products/digital-lavender"
+                    <a href="https://www.burgerbaeclothing.com/products/travis-scott-the-pyramids-heavyweight-baggy-unisex-sweatshirts?variant=44416240517343"
                         target="_blank"><img class="im3"
-                            src="https://cdn.shopify.com/s/files/1/0566/0839/1368/products/Untitled-1_0090_95_jpg_6227258c-5cdd-40b3-ba66-7a773f4e2be6_720x.jpg?v=1668604686"
+                            src="https://www.burgerbaeclothing.com/cdn/shop/files/DSC09698_1680x.jpg?v=1697288816"
                             alt=""></a>
                 </div>
             </div>
             <div class="bo1">
-                <li> some winter wear
-                    <br>other than overlays dude
+                <li> some shoes
+                    <br>at very good price
             </div>
+            <!-- so here we have the link and we have implemneted the image here  -->
             <div class="im2">
-                <a href="https://www2.hm.com/en_in/productpage.0846933109.html" target="_blank"><img class="im3"
-                        src="https://lp2.hm.com/hmgoepprod?set=format%5Bwebp%5D%2Cquality%5B79%5D%2Csource%5B%2F4d%2Fdd%2F4dddde7bce3902da68efa406e2a7b10ab7492447.jpg%5D%2Corigin%5Bdam%5D%2Ccategory%5Bmen_hoodiessweatshirts_hoodies%5D%2Ctype%5BDESCRIPTIVEDETAIL%5D%2Cres%5Bm%5D%2Chmver%5B2%5D&call=url%5Bfile%3A%2Fproduct%2Fmain%5D"
+                <a href="https://www.ajio.com/altheory-low-top-lace-up-sports-shoes/p/450150041005?user=old&utm_source=paisawapas&utm_medium=affiliate&utm_campaign=64faa9e7cac44614a8db42b8-WEB--AIOS-1524792&pwsvid=64faa9e7cac44614a8db42b8" target="_blank"><img class="im3"
+                        src="https://assets.ajio.com/medias/sys_master/root/20221108/sCi8/636a6c3eaeb269659c7a527b/-473Wx593H-450150041-black-MODEL5.jpg"
                         alt=""></a>
                 <a href="https://www2.hm.com/en_in/productpage.0887299005.html" target="_blank"> <img class="im3"
                         src="https://lp2.hm.com/hmgoepprod?set=quality%5B79%5D%2Csource%5B%2F42%2Fd8%2F42d8a25a0337b54e4da5c9ccb6ccd01d85a1813c.jpg%5D%2Corigin%5Bdam%5D%2Ccategory%5B%5D%2Ctype%5BLOOKBOOK%5D%2Cres%5Bm%5D%2Chmver%5B1%5D&call=url[file:/product/main]"
